--- a/Apparel-Coming-Soon-Page/previous-files/package.json
+++ b/Apparel-Coming-Soon-Page/previous-files/package.json
@@ -1,6 +1,9 @@
 {
   "name": "project",
   "dependencies": {
+    "@babel/core": "^7.23.7",
+    "@babel/preset-env": "^7.23.7",
+    "@babel/preset-react": "^7.23.3",
     "jquery": "^3.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -10,9 +13,12 @@
     "babel-loader": "^7.0",
     "babel-preset-env": "*",
     "babel-preset-react": "*",
-    "webpack": "^2.0"
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "scripts": {
+    "start": "webpack-dev-server --mode development --open --hot",
     "build": "webpack",
     "watch": "webpack -w"
   }
